# JotPad

./: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: android.yml  release.yml
apps/landing/: components.json  package.json  vercel.json
apps/landing/app/: layout.tsx  page.tsx
apps/native/: index.html  package.json  tsconfig.json
apps/native/src/: App.tsx
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/capabilities/: default.json
apps/native/src-tauri/icons/: icon.icns
apps/native/src-tauri/src/: lib.rs  utils.rs
apps/web/: next.config.js  package.json
apps/web/app/: layout.tsx  page.tsx
